# VoidLevelEditor

./: .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md  VoidLevelEditor.cpp  VoidLevelEditor.h
src/: main.cpp
src/core/: Application.cpp  Application.h  Utils.h
src/io/: ImportExport.cpp  ImportExport.h  Serialization.h
src/level/: Asset.h  AssetManager.cpp  AssetManager.h  GameObject.h  Level.h  LevelUtils.cpp  LevelUtils.h
src/project/: Asset.h  AssetManager.cpp  AssetManager.h  Project.h
